# libvisual

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  NEWS  README.md  TODO  aclocal.m4  config.h.in  configure  configure.ac  projectLibvisual.kdevelop
libvisual/: .gitignore  AUTHORS  BUGS  CMakeLists.txt  ChangeLog  DOCS_TODO  Doxyfile  Doxyfile.in  HACKING  MANIFESTO  Makefile  Makefile.am  Makefile.in  NEWS  README  README.md  TODO  aclocal.m4  autogen.sh  bootstrap.sh  cmake_uninstall.cmake.in  config.h  config.h.cmake  config.h.in  config.status  configure  configure.ac  gettext.h  libtool  libvisual-0.3.pc.in  libvisual-0.5.pc  libvisual-config.cmake.in  libvisual.pc.cmake  libvisual.pc.in  lv_actor.c  lv_bin.c  lv_bmp.c  lv_config.c  lv_error.c  lv_event.c  (+17 more)
libvisual-0.5.0/: AUTHORS  Makefile  Makefile.am  aclocal.m4  configure  libtool
libvisual-0.5.0/autom4te.cache/: traces.0
libvisual-0.5.0/libvisual/: lv_actor.c  lv_buffer.c  lv_cpu.c  lv_hashlist.c  lv_list.c  lv_ui.c
libvisual-0.5.0/m4/: Makefile  Makefile.in
libvisual-0.5.0/po/: Makefile.in  Makevars  es_AR.gmo
libvisual-avs/: .gitignore  AUTHORS  BUGS  ChangeLog  Makefile.am  NEWS  NOTES  TODO  WINAMP_AVS_FILEFORMAT  W_AVS_WISHLIST  acinclude.m4  configure.ac
libvisual-avs/common/: Makefile.am  avs.h  avs_blend.c  avs_common.h  avs_config.c  avs_config.h  avs_gfx.c  avs_gfx.h  avs_globals.c  avs_globals.h  avs_inlines.h  avs_matrix.h  avs_sound.c  avs_sound.h  lvavs_pipeline.c  lvavs_pipeline.h  lvavs_preset.h
libvisual-avs/docs/: avs_format.txt  winamp_avs_func.txt
libvisual-avs/plugins/: Makefile.am
libvisual-avs/src/: .avs_parse.h.swp  Makefile.am  actor_AVS.c  avs_parse  avs_parse.c  avs_parse.h  avs_serialize.c  avs_serialize.h  lvavs_pipeline.c  lvavs_pipeline.h  lvavs_preset.c  lvavs_preset.h  lvavs_script.c  lvavs_script.h  lvavs_script_tree.c  lvavs_script_vmcompile.c  main.c  rebuild  scripttree.c
libvisual-avs/testpresets/: bassspinwithcomment.avs  blur1.avs  blur2.avs  clouded.pip  dmovetest.pip  fastbrightness1.avs  fastbrightness2.avs  invert.avs  mesh.pip  movetest.pip  oscilliscopestarwithcommentandheavyblurdynamicmovement.avs  ring10.avs  ring11.avs  ring12.avs  ring2.avs  ring9.avs  ringCL.avs  ringLL.avs  rollercoaster.avs  simple.pip  stars.pip  superscope.avs  superscopewithcomment.avs  vertline.pip  violated.avs
libvisual-avs/visscript/: Makefile.am  avs.h  avs_blob_pool.h  avs_compiler.c  avs_debug.c  avs_functions.c  avs_functions.h  avs_functions.perf  avs_functions.perf.h  avs_il_assembler.c  avs_il_assembler.h  avs_il_core.c  avs_il_core.h  avs_il_instruction.c  avs_il_instruction.h  avs_il_register.c  avs_il_register.h  avs_il_tree.c  avs_il_tree_node.h  avs_ix.h  avs_ix_compiler.c  avs_ix_compiler.h  avs_ix_machine.c  avs_lexer.c  avs_lexer.h  avs_parser.c  avs_parser_private.h  avs_runnable.c  avs_runnable.h  avs_stack.c  avs_x86_compiler.c  avs_x86_opcode.c  avs_x86_opcode.h  avs_x86_opcode_table.h  main.c  rebuild
libvisual-bindings/libvisual-cpp/: AUTHORS  COPYING  Makefile.am  autogen.sh  libvisual-cpp.pc.in
libvisual-bmp/: AUTHORS  BUGS  ChangeLog  Makefile.am  NEWS  README  autogen.sh  config.h.in  configure.ac  libvisual-xmms.glade
libvisual-bmp/pixmaps/: libvisual-xmms-vis.xpm
libvisual-bmp/po/: ChangeLog  LINGUAS  Makefile.in.in  POTFILES.in  es.po  es_AR.po  fr.po  libvisual-xmms.pot  nl.po  pt_BR.po  ru.po
libvisual-bmp/src/: Makefile.am  about.c  config_gui.c  lv_bmp_config.c  main.c
libvisual-cpp/: Doxyfile.in  Makefile.am  autogen.sh  configure.ac
libvisual-cpp/libvisual-cpp/: Makefile.am  libvisual_cpp.cpp  libvisual_cpp.hpp  lv_color.hpp  lv_config.hpp  lv_cpu.hpp  lv_error.hpp  lv_fourier.hpp  lv_function.hpp  lv_object.hpp  lv_os.hpp  lv_palette.hpp  lv_random.hpp  lv_rectangle.hpp  lv_thread.cpp  lv_thread.hpp  lv_time.hpp  lv_typelist.hpp  lv_utils.hpp  lv_video.hpp
libvisual-cpp/m4/: boost.m4
libvisual-cpp/src/: Makefile.am  Makefile.in  libvisual_cpp.cpp  libvisual_cpp.hpp  lv_color.cpp  lv_color.hpp  lv_config.cpp  lv_config.hpp  lv_cpu.cpp  lv_cpu.hpp  lv_error.hpp  lv_fft.cpp  lv_fft.hpp  lv_fourier.cpp  lv_fourier.hpp  lv_function.cpp  lv_function.hpp  lv_object.cpp  lv_object.hpp  lv_random.cpp  lv_random.hpp  lv_rectangle.cpp  lv_rectangle.hpp  lv_thread.cpp  lv_thread.hpp  lv_time.cpp  lv_time.hpp  lv_typelist.hpp  lv_video.cpp  lv_video.hpp
libvisual-cpp/tests/: Makefile.am  libvisual_cpp.cpp  lv_color.cpp  lv_config.cpp  lv_cpu.cpp  lv_fourier.cpp  lv_function.cpp  lv_math.cpp  lv_object.cpp  lv_os.cpp  lv_palette.cpp  lv_random.cpp  lv_rectangle.cpp  lv_thread.cpp  lv_time.cpp  lv_utils.cpp  lv_video.cpp
libvisual-display/: AUTHORS  ChangeLog  Makefile.am  TODO  configure.ac  libvisual-display.pc.in
libvisual-display/drivers/: Makefile.am
libvisual-display/example/: Makefile.am  main.c
libvisual-display/lvdisplay/: Makefile.am  lv_display.c  lv_display.h  lv_fpsctls.c
libvisual-gforce/: ChangeLog  Makefile.am  NEWS  TODO  configure.ac
libvisual-gforce/Common/: EgCommon.h  Makefile.am
libvisual-gforce/GForceColorMaps/: Acid Gap  Acid Gap 2  Acid Gap 5  Acid_Gap  Acid_Gap_2  Aqua  Back in the 70s (red-blue)  Bizarro Mystery Unveiled  Bizarro-ColorWheel  Bizarro_Mystery_Unveiled  Blood  ColorWheel  DT - Antarctis  DT - Glows  (+43 more)
libvisual-nebulus/: AUTHORS  ChangeLog  HACKING  Makefile.am  NEWS  README  TODO  config.h.in  configure.ac
libvisual-plugins/: .gitignore  AUTHORS  CMakeLists.txt  ChangeLog  HACKING  Makefile  Makefile.am  Makefile.in  NEWS  README  TODO  aclocal.m4  autogen.sh  config.h  config.h.cmake  config.h.cmake.in  config.h.in  config.status  configure  configure.ac  gettext.h  libtool  libvisual-plugins.spec
libvisual-widgets/: AUTHORS  BUGS  COPYING  ChangeLog  HACKING  Makefile.am  NEWS  README  TODO  autogen.sh  configure.ac  libvisual-widgets-gtk1.pc.in  libvisual-widgets-gtk2.pc.in  libvisual-widgets-qt.pc.in
libvisual-xmms/: AUTHORS  BUGS  ChangeLog  HACKING  Makefile.am  Makefile.in  NEWS  README  TODO  autogen.sh  config.h.in  configure.ac  libtool  libvisual-xmms.glade
(+2822 files in other folders)
